css: letter spacing fix

--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -271,6 +271,10 @@
   color: var(--blue-5);
   letter-spacing: 0.125em;
 
+  @include breakpoint(medium) {
+    letter-spacing: 0.25em;
+  }
+
   &--big {
     @extend .text-spaced;
     letter-spacing: 0.25em;
